# 114-2-DBMS-GP8-Final

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  pyproject.toml
bench/: Cargo.toml
bench/src/: coldwarm.rs  concurrent.rs  cost.rs  db.rs  efsearch.rs  fusion.rs  graph_engine.rs  main.rs  microbench.rs  plan.rs  query.rs  smoke.rs  storage.rs
benchmarks/regression/: baseline.json
docker/: Dockerfile.bench  Dockerfile.postgres-age
docs/: v3_design.md
eval/: apply_labels.py  apply_labels_50k.py  augment_gt_per_aspect.py  build_candidate_pool.py  candidates.jsonl  candidates_50k.jsonl  candidates_minilm.jsonl  evaluate.py  ground-truth.jsonl  ground-truth_5k.jsonl  labels_50k_new.py  labels_v3_aug.py  queries.jsonl  regress.py
ingest/: embed_chunks.py  load_graph.py  openalex_fetch.py  synthesize_graph.py
migrations/: 0001_paper_schema.sql  0002_age_graph_init.sql  0003_indexes_vector_bm25.sql  0004_age_property_index.sql
reports/: bfs_shootout.json  coldwarm_full_21.json  coldwarm_full_28.json  coldwarm_q1_naive.json  coldwarm_q1_v0.json  coldwarm_q1_v1.json  coldwarm_q1_v2.json  coldwarm_q1_v3.json  coldwarm_q2_naive.json  coldwarm_q2_v0.json  coldwarm_q2_v1.json  coldwarm_q2_v2.json  coldwarm_q2_v3.json  coldwarm_q3_naive.json  coldwarm_q3_v0.json  coldwarm_q3_v1.json  coldwarm_q3_v2.json  coldwarm_q3_v3.json  coldwarm_q4_naive.json  coldwarm_q4_v0.json  coldwarm_q4_v1.json  coldwarm_q4_v2.json  coldwarm_q4_v3.json  coldwarm_q5_naive.json  coldwarm_q5_v0.json  coldwarm_q5_v1.json  coldwarm_q5_v2.json  coldwarm_q5_v3.json  coldwarm_q6_naive.json  coldwarm_q6_v0.json  coldwarm_q6_v1.json  coldwarm_q6_v2.json  coldwarm_q6_v3.json  coldwarm_q7_naive.json  coldwarm_q7_v0.json  coldwarm_q7_v1.json  coldwarm_q7_v2.json  coldwarm_q7_v3.json  coldwarm_v3.json  eval_phase1_e4.json  (+3 more)
scripts/: coldwarm_all_21.py  coldwarm_all_28.py  demo_14cells.py  demo_21cells.py  init-extensions.sql
