[workspace]
members = ["bench"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.86"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio   = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }
sqlx    = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "bigdecimal", "macros", "migrate"] }
serde   = { version = "1", features = ["derive"] }
serde_json = "1"
clap    = { version = "4", features = ["derive", "env"] }
anyhow  = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand    = "0.8"
hdrhistogram = "7"
async-trait = "0.1"
